chore: updating readme